# agent-meter-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/agent-meter/: Cargo.toml
crates/agent-meter-axum/: Cargo.toml
crates/agent-meter-axum/examples/: axum_server.rs
crates/agent-meter-axum/src/: lib.rs
crates/agent-meter-client/: Cargo.toml
crates/agent-meter-client/examples/: e2e.rs
crates/agent-meter-client/src/: client.rs  lib.rs  log.rs  reconcile.rs
crates/agent-meter/examples/: attestation.rs  basic.rs  sqlite_transport.rs
crates/agent-meter/src/: lib.rs  meter.rs  signing.rs  types.rs
crates/agent-meter/src/transport/: attestation.rs  http.rs  memory.rs  mod.rs  sqlite.rs
docs/: e2e-flow.md
