[package]
name = "agent-meter"
version = "0.1.0"
edition = "2021"
description = "Usage metering for the agent economy. Drop-in metering for APIs that serve AI agents."
license = "MIT"
repository = "https://github.com/oztenbot/agent-meter-rs"
keywords = ["metering", "billing", "agent", "ai", "usage"]
categories = ["web-programming", "api-bindings"]

[features]
default = []
sqlite = ["dep:rusqlite"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
thiserror = "1"
rusqlite = { version = "0.31", features = ["bundled"], optional = true }

[[example]]
name = "sqlite_transport"
required-features = ["sqlite"]

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
